# lua_wrapper

./: .gitignore  CMakeLists.txt  Makefile  script.lua
lua-5.4.6/src/: Makefile  lua  lua_wrapper.cpp  lua_wrapper.h  luac  result.h  sandbox.cpp
src/: lua_wrapper.cpp  lua_wrapper.h  result.h  sandbox.cpp
